k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: grocery-fe-deployment
spec:
    template:
        spec:
            containers:
                - name: grocery-fe-container
                  image: grocery-fe-image
                  ports:
                      - containerPort: 80
