k8s/base/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocery-fe-lb
spec:
  selector:
    app: grocery-fe
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  type: LoadBalancer
