k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: grocery-fe-service
spec:
    selector:
      app: grocery-fe
    ports:
        - port: 8000
          targetPort: 80
          protocol: TCP
    type: LoadBalancer
