k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocery-fe-ingress
spec:
  defaultBackend:
    service:
      name: grocery-fe-service
      port:
        number: 80
